--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -49,7 +49,7 @@ canvas {
 
 #help_modal {
   display: none;
-  background-color: rgba(0, 0, 0, 0.8); /* Make background slightly opaque */
+  background-color: rgba(0, 0, 0, 0.2);
   margin: 10% auto;
   padding: 20px;
   width: 80vw;
@@ -59,42 +59,44 @@ canvas {
   z-index: 20;
 }
 
-.help_modal_title {
-  color: black;
-  font-family: "Papyrus", fantasy;
-  font-size: 24;
-}
-
 #papyrus_horizontal {
   width: 80vw;
 }
 
 #close_help {
   position: absolute;
-  top: 20vh;
-  left: calc(80vw - 5vw);
+  top: 16vh;
+  left: calc(80vw - 10vw);
+}
+
+.help_modal_title {
+  color: black;
+  font-family: "Papyrus", fantasy;
+  font-size: 24;
 }
 
 .swipe {
   position: absolute;
-  top: 20vh;
+  top: 50vh;
   left: 20vw;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 .tap {
   position: absolute;
-  top: 20vh;
+  top: 50vh;
   left: calc(80vw - 20vw);
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
 #swipe {
-  width: 20vw;
+  width: 10vw;
 }
 
 #tap {
-  width: 20vw;
+  width: 10vw;
 }
