Testing "+ (0.5 * 100vh) - (0.5 * 0.75 * 80vw)"

--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -80,7 +80,8 @@ canvas {
 
 #close_help {
   position: absolute;
-  top: calc(0.18 * 0.75 * 80vw);
+  /*top: calc(0.18 * 0.75 * 80vw);*/
+  top: calc((0.09 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
   left: calc(0.9 * 80vw);
   font-family: "Papyrus", fantasy;
   font-size: 36px;
