--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   overflow: hidden;
+  touch-action: none;
 }
 canvas {
   display: block;
@@ -27,7 +28,7 @@ canvas {
   width: 30px;
   height: 30px;
   cursor: pointer;
-  z-index: 10;
+  z-index: 20;
 }
 
 #settings-icon-button {
@@ -37,7 +38,120 @@ canvas {
   width: 30px;
   height: 30px;
   cursor: pointer;
-  z-index: 10;
+  z-index: 20;
+}
+
+/* Modal Styling */
+.modal {
+  display: none; /* Hide modal by default */
+  position: fixed;
+  z-index: 30;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-popup {
+  background: url("../images/papyrus_scroll_double_sided_wide_rotated.png") no-repeat center center;
+  background-size: 100% 100%;
+  font-family: 'Lucida Calligraphy', 'Brush Script MT', cursive;
+  margin: 10% auto;
+  padding: 20px;
+  width: 80%;
+  max-width: 375px;
+  border-radius: 12px;
+  color: black;
+  position: relative;
+  max-height: 90vh;
+  overflow-y: auto;
+  z-index: 30;
+}
+
+.modal-logo-container {
+  position: absolute;
+  top: 30px;
+  left: 70px;
+  z-index: 40;
+}
+
+.modal-logo {
+  width: 40px;
+  height: 40px;
+}
+
+.modal-title {
+  font-size: 24px;
+  margin-top: 0;
+  padding-top: 40px;
+  text-align: center;
+}
+
+.modal-close {
+  color: black;
+  position: absolute;
+  top: 30px;
+  right: 70px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  z-index: 40;
+}
+
+.modal-close:hover {
+  color: #bbb;
+}
+
+.modal-content {
+  max-width: 70%;
+  margin-left: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.modal-column-left,
+.modal-column-right {
+  width: 48%;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.modal-icon {
+  width: 80px;
+  height: auto; /* Maintain aspect ratio */
+  max-width: 100%;
+}
+
+.modal-text {
+  margin-top: 10px;
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 10px;
+  border-radius: 5px;
+}
+
+/* Settings Page/Modal */
+/* Rows styling */
+.settings-modal-default-mode,
+.settings-modal-high-contrast-mode,
+.settings-modal-light-mode,
+.settings-modal-color-blind-mode,
+.settings-modal-volume {
+  position: relative;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 1px;
+  margin-top: 10px;
+  background-color: rgba(255, 255, 255, 0.05);
+  padding: 15px 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.settings-modal-default-mode {
+  margin-top: 20%;
 }
 
 .scope {
@@ -46,6 +160,171 @@ canvas {
   height: 100px;
   border: 2px solid white;
   border-radius: 50%;
-  pointer-events: none;
+  pointer-events: auto;
+  display: none;
+  z-index: 10;
+}
+
+#help_modal {
+  display: none;
+  position: fixed;
+  z-index: 30;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /*background-color: transparent;*/
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#papyrus_horizontal {
+  /*background-color: transparent;*/
+  background-color: rgba(32, 22, 47, 0.8);
+  width: 80vw;
+  height: calc(0.75 * 80vw);
+  border-radius: 12px;
+  position: relative;
+  top: calc((100vh - 0.75 * 80vw) / 2);
+  left: calc((100vw - 80vw) / 2);
+}
+
+#close_help {
+  position: absolute;
+  top: calc((0.09 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.9 * 80vw);
+  font-family: "Papyrus", fantasy;
+  font-size: calc(0.04 * 0.75 * 80vw);
+  cursor: pointer;
+}
+
+#help_modal_title {
+  position: absolute;
+  top: calc((0.22 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.57 * 80vw);
+  /*color: black;*/
+  font-family: "Papyrus", fantasy;
+  font-size: calc(0.06 * 0.75 * 80vw);
+}
+
+.swipe {
+  position: absolute;
+  top: calc((0.48 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.42 * 80vw);
+  display: flex;
+  flex-direction: column;
+  font-family: "Papyrus", fantasy;
+}
+
+#swipe {
+  width: calc(0.12 * 80vw);
+  align-self: center;
+}
+
+.tap {
+  position: absolute;
+  top: calc((0.46 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.67 * 80vw);
+  display: flex;
+  flex-direction: column;
+  font-family: "Papyrus", fantasy;
+}
+
+#tap {
+  width: calc(0.12 * 80vw);
+  align-self: center;
+  padding: 0.6vw;
+}
+
+.text_box {
+  border-style: solid;
+  border-width: thin;
+  border-color: black;
+  border-radius: 5px;
+  padding: 1vw;
+  display: flex;
+  flex-direction: column;
+}
+
+.instructions {
+  text-align: center;
+  font-size: calc(0.02 * 0.75 * 80vw);
+}
+
+.invisibuttons {
   display: none;
 }
+
+.calligraphy-divider-container {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.calligraphy-divider {
+  width: 80%;
+  max-width: 300px;
+  opacity: 0.8;
+}
+
+input[type="radio"] {
+  appearance: none; /* Removes default styling */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  width: 18px;
+  height: 18px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border: 2px solid black;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s ease;
+}
+
+input[type="radio"]:checked {
+  background: rgba(0, 0, 0, 0.9);
+}
+
+input[type="radio"]:checked::before {
+  content: "";
+  width: 10px;
+  height: 10px;
+  background: black;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+input[type="range"] {
+  -webkit-appearance: none; /* Removes default styling */
+  width: 100%;
+  height: 6px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  outline: none;
+  transition: background 0.2s;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Removes default styling */
+  width: 18px;
+  height: 18px;
+  background: black;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.2s, background 0.2s;
+}
+
+input[type="range"]::-webkit-slider-thumb:hover {
+  background: rgba(0, 0, 0, 0.8);
+  transform: scale(1.2);
+}
+
+input[type="range"]::-moz-range-thumb {
+  width: 18px;
+  height: 18px;
+  background: black;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
