--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -189,49 +189,62 @@ canvas {
 
 #close_help {
   position: absolute;
-  top: calc((0.09 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.9 * 90vw);
+  /*top: calc((0.09 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
+  /*left: calc(0.9 * 90vw);*/
+  top: calc((0.085 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
+  left: calc(0.83 * 90vw);
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.04 * 0.75 * 90vw);
+  /*font-size: calc(0.04 * 0.75 * 90vw);*/
+  font-size: calc(0.05 * 0.75 * 90vw);
   cursor: pointer;
 }
 
 #help_modal_title {
   position: absolute;
-  top: calc((0.22 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.57 * 90vw);
+  /*top: calc((0.22 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
+  top: calc((0.2 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
+  /*left: calc(0.57 * 90vw);*/
+  left: calc(0.49 * 90vw);
   /*color: black;*/
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.06 * 0.75 * 90vw);
+  /*font-size: calc(0.06 * 0.75 * 90vw);*/
+  font-size: calc(0.08 * 0.75 * 90vw);
 }
 
 .swipe {
   position: absolute;
-  top: calc((0.48 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.42 * 90vw);
+  /*top: calc((0.48 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
+  /*left: calc(0.42 * 90vw);*/
+  top: calc((0.47 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
+  left: calc(0.29 * 90vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #swipe {
-  width: calc(0.12 * 90vw);
+  /*width: calc(0.12 * 90vw);*/
+  width: calc(0.13 * 90vw);
   align-self: center;
 }
 
 .tap {
   position: absolute;
-  top: calc((0.46 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.67 * 90vw);
+  /*top: calc((0.46 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
+  /*left: calc(0.67 * 90vw);*/
+  top: calc((0.45 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
+  left: calc(0.58 * 90vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #tap {
-  width: calc(0.12 * 90vw);
+  /*width: calc(0.12 * 90vw);*/
+  width: calc(0.13 * 90vw);
   align-self: center;
-  padding: 0.6vw;
+  /*padding: 0.6vw;*/
+  padding: 0.69vw;
 }
 
 .text_box {
@@ -242,11 +255,13 @@ canvas {
   padding: 1vw;
   display: flex;
   flex-direction: column;
+  width: 20vw;
 }
 
 .instructions {
   text-align: center;
-  font-size: calc(0.02 * 0.75 * 90vw);
+  /*font-size: calc(0.02 * 0.75 * 90vw);*/
+  font-size: calc(0.03 * 0.75 * 90vw);
 }
 
 .invisibuttons {
