--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -178,45 +178,43 @@ canvas {
 
 #papyrus_horizontal {
   background-color: transparent;
-  /*width: 80vw;*/
-  width: 90vw;
-  height: calc(0.75 * 90vw);
-  /*border-radius: 12px;*/
+  width: 85vw;
+  height: calc(0.75 * 85vw);
   position: relative;
-  top: calc((100vh - 0.75 * 90vw) / 2);
-  left: calc((100vw - 90vw) / 2);
+  top: calc((100vh - 0.75 * 85vw) / 2);
+  left: calc((100vw - 85vw) / 2);
 }
 
 #close_help {
   position: absolute;
-  /*top: calc((0.09 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
-  /*left: calc(0.9 * 90vw);*/
-  top: calc((0.085 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.83 * 90vw);
+  /*top: calc((0.08 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));*/
+  /*left: calc(0.86 * 85vw);*/
+  top: calc((0.073 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.855 * 85vw);
   font-family: "Papyrus", fantasy;
-  /*font-size: calc(0.04 * 0.75 * 90vw);*/
-  font-size: calc(0.05 * 0.75 * 90vw);
+  /*font-size: calc(0.06 * 0.75 * 85vw);*/
+  font-size: calc(0.07 * 0.75 * 85vw);
   cursor: pointer;
 }
 
 #help_modal_title {
   position: absolute;
   /*top: calc((0.22 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
-  top: calc((0.18 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
+  top: calc((0.18 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
   /*left: calc(0.57 * 90vw);*/
-  left: calc(0.49 * 90vw);
+  left: calc(0.52 * 85vw);
   /*color: black;*/
   font-family: "Papyrus", fantasy;
   /*font-size: calc(0.06 * 0.75 * 90vw);*/
-  font-size: calc(0.08 * 0.75 * 90vw);
+  font-size: calc(0.08 * 0.75 * 85vw);
 }
 
 .swipe {
   position: absolute;
   /*top: calc((0.48 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
   /*left: calc(0.42 * 90vw);*/
-  top: calc((0.46 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.29 * 90vw);
+  top: calc((0.46 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.33 * 85vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
@@ -224,7 +222,7 @@ canvas {
 
 #swipe {
   /*width: calc(0.12 * 90vw);*/
-  width: calc(0.13 * 90vw);
+  width: calc(0.13 * 85vw);
   align-self: center;
 }
 
@@ -232,8 +230,8 @@ canvas {
   position: absolute;
   /*top: calc((0.46 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
   /*left: calc(0.67 * 90vw);*/
-  top: calc((0.44 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));
-  left: calc(0.58 * 90vw);
+  top: calc((0.439 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.61 * 90vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
@@ -241,7 +239,7 @@ canvas {
 
 #tap {
   /*width: calc(0.12 * 90vw);*/
-  width: calc(0.13 * 90vw);
+  width: calc(0.13 * 85vw);
   align-self: center;
   /*padding: 0.6vw;*/
   padding: 0.69vw;
@@ -252,16 +250,18 @@ canvas {
   border-width: thin;
   border-color: black;
   border-radius: 5px;
-  padding: 1vw;
+  /*padding: 1vw;*/
+  padding: 0.5vw;
   display: flex;
   flex-direction: column;
-  width: 20vw;
+  /*width: 20vw;*/
+  width: 19vw;
 }
 
 .instructions {
   text-align: center;
   /*font-size: calc(0.02 * 0.75 * 90vw);*/
-  font-size: calc(0.03 * 0.75 * 90vw);
+  font-size: calc(0.03 * 0.75 * 85vw);
 }
 
 .invisibuttons {
