--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -19,7 +19,14 @@ canvas {
   visibility: hidden;
   opacity: 0;
   transition: 1.5s;
+  user-select: all; /* allow copying */
 }
+
+.main-title::selection {
+  background: transparent; /* remove highlight effect */
+  color: inherit; /* keep text color unchanged */
+}
+
 /* Icon Button Styling */
 #help-icon-button {
   position: fixed;
@@ -29,6 +36,12 @@ canvas {
   height: 30px;
   cursor: pointer;
   z-index: 20;
+  user-select: all; /* allow copying */
+}
+
+#help-icon-button::selection {
+  background: transparent; /* remove highlight effect */
+  color: inherit; /* keep text color unchanged */
 }
 
 #settings-icon-button {
@@ -39,6 +52,12 @@ canvas {
   height: 30px;
   cursor: pointer;
   z-index: 20;
+  user-select: all; /* allow copying */
+}
+
+#settings-icon-button::selection {
+  background: transparent; /* remove highlight effect */
+  color: inherit; /* keep text color unchanged */
 }
 
 /* Modal Styling */
@@ -156,8 +175,8 @@ canvas {
 
 .scope {
   position: absolute;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   border: 2px solid white;
   border-radius: 50%;
   pointer-events: auto;
@@ -173,76 +192,66 @@ canvas {
   top: 0;
   width: 100%;
   height: 100%;
+  /*background-color: transparent;*/
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 #papyrus_horizontal {
-  background-color: transparent;
-  width: 85vw;
-  height: calc(0.75 * 85vw);
+  /*background-color: transparent;*/
+  background-color: rgba(32, 22, 47, 0.8);
+  width: 80vw;
+  height: calc(0.75 * 80vw);
+  border-radius: 12px;
   position: relative;
-  top: calc((100vh - 0.75 * 85vw) / 2);
-  left: calc((100vw - 85vw) / 2);
+  top: calc((100vh - 0.75 * 80vw) / 2);
+  left: calc((100vw - 80vw) / 2);
 }
 
 #close_help {
   position: absolute;
-  /*top: calc((0.08 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));*/
-  /*left: calc(0.86 * 85vw);*/
-  top: calc((0.073 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.855 * 85vw);
+  top: calc((0.09 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.9 * 80vw);
   font-family: "Papyrus", fantasy;
-  /*font-size: calc(0.06 * 0.75 * 85vw);*/
-  font-size: calc(0.07 * 0.75 * 85vw);
+  font-size: calc(0.04 * 0.75 * 80vw);
   cursor: pointer;
 }
 
 #help_modal_title {
   position: absolute;
-  /*top: calc((0.22 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
-  top: calc((0.18 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  /*left: calc(0.57 * 90vw);*/
-  left: calc(0.52 * 85vw);
+  top: calc((0.22 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.57 * 80vw);
   /*color: black;*/
   font-family: "Papyrus", fantasy;
-  /*font-size: calc(0.06 * 0.75 * 90vw);*/
-  font-size: calc(0.08 * 0.75 * 85vw);
+  font-size: calc(0.06 * 0.75 * 80vw);
 }
 
 .swipe {
   position: absolute;
-  /*top: calc((0.48 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
-  /*left: calc(0.42 * 90vw);*/
-  top: calc((0.46 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.33 * 85vw);
+  top: calc((0.48 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.42 * 80vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #swipe {
-  /*width: calc(0.12 * 90vw);*/
-  width: calc(0.13 * 85vw);
+  width: calc(0.12 * 80vw);
   align-self: center;
 }
 
 .tap {
   position: absolute;
-  /*top: calc((0.46 * 0.75 * 90vw) + (0.5 * 100vh) - (0.5 * 0.75 * 90vw));*/
-  /*left: calc(0.67 * 90vw);*/
-  top: calc((0.439 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.58 * 90vw);
+  top: calc((0.46 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
+  left: calc(0.67 * 80vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #tap {
-  /*width: calc(0.12 * 90vw);*/
-  width: calc(0.13 * 85vw);
+  width: calc(0.12 * 80vw);
   align-self: center;
-  /*padding: 0.6vw;*/
-  padding: 0.69vw;
+  padding: 0.6vw;
 }
 
 .text_box {
@@ -250,18 +259,14 @@ canvas {
   border-width: thin;
   border-color: black;
   border-radius: 5px;
-  /*padding: 1vw;*/
-  padding: 0.5vw;
+  padding: 1vw;
   display: flex;
   flex-direction: column;
-  /*width: 20vw;*/
-  width: 19vw;
 }
 
 .instructions {
   text-align: center;
-  /*font-size: calc(0.02 * 0.75 * 90vw);*/
-  font-size: calc(0.03 * 0.75 * 85vw);
+  font-size: calc(0.02 * 0.75 * 80vw);
 }
 
 .invisibuttons {
