Testing US322Task329

--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -7,6 +7,10 @@ canvas {
   display: block;
 }
 
+img {
+  pointer-events: none;
+}
+
 .main-title {
   position: absolute;
   left: 50%;
@@ -73,9 +77,10 @@ canvas {
 }
 
 .modal-popup {
-  background: url("../images/papyrus_scroll_double_sided_wide_rotated.png") no-repeat center center;
+  background: url("../images/papyrus_scroll_double_sided_wide_rotated.png")
+    no-repeat center center;
   background-size: 100% 100%;
-  font-family: 'Lucida Calligraphy', 'Brush Script MT', cursive;
+  font-family: "Lucida Calligraphy", "Brush Script MT", cursive;
   margin: 10% auto;
   padding: 20px;
   width: 80%;
@@ -175,13 +180,24 @@ canvas {
 
 .scope {
   position: absolute;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   border: 2px solid white;
   border-radius: 50%;
   pointer-events: auto;
   display: none;
   z-index: 10;
+  -webkit-mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 30%,
+    rgba(0, 0, 0, 1) 60%
+  );
+  mask-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0) 30%,
+    rgba(0, 0, 0, 1) 60%
+  );
+  backdrop-filter: none;
 }
 
 #help_modal {
@@ -331,7 +347,9 @@ input[type="range"]::-webkit-slider-thumb {
   background: black;
   border-radius: 50%;
   cursor: pointer;
-  transition: transform 0.2s, background 0.2s;
+  transition:
+    transform 0.2s,
+    background 0.2s;
 }
 
 input[type="range"]::-webkit-slider-thumb:hover {
@@ -346,4 +364,3 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
-
