Had to add css from 355

--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -210,66 +210,62 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
-  /*background-color: transparent;*/
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 #papyrus_horizontal {
-  /*background-color: transparent;*/
-  background-color: rgba(32, 22, 47, 0.8);
-  width: 80vw;
-  height: calc(0.75 * 80vw);
-  border-radius: 12px;
+  background-color: transparent;
+  width: 85vw;
+  height: calc(0.75 * 85vw);
   position: relative;
-  top: calc((100vh - 0.75 * 80vw) / 2);
-  left: calc((100vw - 80vw) / 2);
+  top: calc((100vh - 0.75 * 85vw) / 2);
+  left: calc((100vw - 85vw) / 2);
 }
 
 #close_help {
   position: absolute;
-  top: calc((0.09 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
-  left: calc(0.9 * 80vw);
+  top: calc((0.073 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.855 * 85vw);
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.04 * 0.75 * 80vw);
+  font-size: calc(0.07 * 0.75 * 85vw);
   cursor: pointer;
 }
 
 #help_modal_title {
   position: absolute;
-  top: calc((0.22 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
-  left: calc(0.57 * 80vw);
-  /*color: black;*/
+  top: calc((0.18 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.52 * 85vw);
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.06 * 0.75 * 80vw);
+  font-size: calc(0.08 * 0.75 * 85vw);
 }
 
 .swipe {
   position: absolute;
-  top: calc((0.48 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
-  left: calc(0.42 * 80vw);
+  top: calc((0.46 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.33 * 85vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #swipe {
-  width: calc(0.12 * 80vw);
+  width: calc(0.13 * 85vw);
   align-self: center;
 }
 
 .tap {
   position: absolute;
-  top: calc((0.46 * 0.75 * 80vw) + (0.5 * 100vh) - (0.5 * 0.75 * 80vw));
-  left: calc(0.67 * 80vw);
+  top: calc((0.439 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
+  left: calc(0.58 * 90vw);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #tap {
-  width: calc(0.12 * 80vw);
+  width: calc(0.13 * 85vw);
   align-self: center;
-  padding: 0.6vw;
+  padding: 0.69vw;
 }
 
 .text_box {
@@ -277,14 +273,15 @@ img {
   border-width: thin;
   border-color: black;
   border-radius: 5px;
-  padding: 1vw;
+  padding: 0.5vw;
   display: flex;
   flex-direction: column;
+  width: 19vw;
 }
 
 .instructions {
   text-align: center;
-  font-size: calc(0.02 * 0.75 * 80vw);
+  font-size: calc(0.03 * 0.75 * 85vw);
 }
 
 .invisibuttons {
