Almost done, but need to test on mobile

--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -215,28 +215,28 @@ img {
 
 #papyrus_horizontal {
   background-color: transparent;
-  width: 85vw;
-  height: calc(0.75 * 85vw);
+  width: calc(0.75 * 85vh);
+  height: 85vh;
   position: relative;
-  top: calc((100vh - 0.75 * 85vw) / 2);
-  left: calc((100vw - 85vw) / 2);
+  top: calc((100vh - 85vh) / 2);
+  left: calc((100vw - (0.75 * 85vh)) / 2);
 }
 
 #close_help {
   position: absolute;
-  top: calc((0.073 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.855 * 85vw);
+  top: calc(100vh - 85vh - ((0.1 * 0.75 * 85vh) / 2));
+  left: calc((100vw / 2) + ((0.75 * 85vh) / 4));
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.07 * 0.75 * 85vw);
+  font-size: calc(0.1 * 0.75 * 85vh);
   cursor: pointer;
 }
 
 #help_modal_title {
   position: absolute;
-  top: calc((0.18 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.52 * 85vw);
+  top: calc(100vh - 85vh + ((0.11 * 0.75 * 85vh) / 2));
+  left: calc((100vw / 2) - (4 * 0.35 * 0.11 * 0.75 * 85vh));
   font-family: "Papyrus", fantasy;
-  font-size: calc(0.08 * 0.75 * 85vw);
+  font-size: calc(0.11 * 0.75 * 85vh);
 }
 
 .swipe {
