--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -241,29 +241,29 @@ img {
 
 .swipe {
   position: absolute;
-  top: calc((0.46 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.33 * 85vw);
+  top: calc(3.3 * (100vh - 85vh));
+  left: calc(0.83 * 0.75 * 85vh);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #swipe {
-  width: calc(0.13 * 85vw);
+  width: calc(0.2 * 0.75 * 85vh);
   align-self: center;
 }
 
 .tap {
   position: absolute;
-  top: calc((0.439 * 0.75 * 85vw) + (0.5 * 100vh) - (0.5 * 0.75 * 85vw));
-  left: calc(0.58 * 90vw);
+  top: calc(3.17 * (100vh - 85vh));
+  left: calc(1.15 * 0.75 * 85vh);
   display: flex;
   flex-direction: column;
   font-family: "Papyrus", fantasy;
 }
 
 #tap {
-  width: calc(0.13 * 85vw);
+  width: calc(0.2 * 0.75 * 85vh);
   align-self: center;
   padding: 0.69vw;
 }
@@ -273,15 +273,15 @@ img {
   border-width: thin;
   border-color: black;
   border-radius: 5px;
-  padding: 0.5vw;
+  padding: 0.5vh;
   display: flex;
   flex-direction: column;
-  width: 19vw;
+  width: calc(0.27* 0.75* 85vh);
 }
 
 .instructions {
   text-align: center;
-  font-size: calc(0.03 * 0.75 * 85vw);
+  font-size: calc(0.02 * 85vh);
 }
 
 .invisibuttons {
