--- a/lore_and_mythology_experience/assets/css/index.css
+++ b/lore_and_mythology_experience/assets/css/index.css
@@ -1,239 +1,235 @@
 /* Main Styling */
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: white;
-  background: white;
-  color: white;
-  text-align: center;
-  display: flex;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  position: absolute;
-  margin: 0;
-  padding: 0;
-  overscroll-behavior: none;
-}
-
-img {
-  pointer-events: none;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    background: white;
+    color: white;
+    text-align: center;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    overscroll-behavior: none;
 }
 /* Launch Page */
 #container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  background-color: #ffffff;
-  align-items: center;
-  margin-left: 0vh;
-  width: 100%;
-  margin-right: 0vh;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #ffffff;
+    align-items: center;
+    margin-left: 0vh;
+    width: 100%;
+    margin-right: 0vh;
+    text-align: center;
 }
 
 #body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 }
 
 #psyche-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-self: center;
-  background-image: linear-gradient(to right, #302144, #000000);
-  align-items: center;
-  min-height: 5%;
-  width: 100%;
-  text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-self: center;
+    background-image: linear-gradient(to right, #302144, #000000);
+    align-items: center;
+    min-height: 5%;
+    width: 100%;
+    text-align: center;
 }
 
 #psyche-icon {
-  position: absolute;
-  left: 0;
-  align-self: center;
-  max-height: 75px;
-  max-width: 75px;
-  min-height: 75px;
-  min-width: 75px;
-  height: 15%;
-  width: 15%;
-  margin-left: 5%;
+    position: absolute;
+    left: 0;
+    align-self: center;
+    max-height: 75px;
+    max-width: 75px;
+    min-height: 75px;
+    min-width: 75px;
+    height: 15%;
+    width: 15%;
+    margin-left: 5%;
 }
 
 #header {
-  align-self: center;
-  margin-left: 100px !important;
-  margin-right: 100px !important;
+    align-self: center;
+    margin-left: 100px !important;
+    margin-right: 100px !important;
 }
 
 h1 {
-  margin-left: 100px;
-  margin-right: 100px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .psyche-info {
-  margin-top: 50px;
-  font-weight: bold;
-  border: 2px solid white;
-  color: black;
+    margin-top: 50px;
+    font-weight: bold;
+    border: 2px solid white;
+    color: black;
 }
 
 .psyche-info-line {
-  font-family: "Helvetica", sans-serif;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 1.4;
-  text-align: center;
-  color: #302144;
-  letter-spacing: -1px;
+    font-family: "Helvetica", sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 1.4;
+    text-align: center;
+    color: #302144;
+    letter-spacing: -1px;
 }
 
 .psyche-info-headline {
-  font-family: "Helvetica", sans-serif;
-  font-weight: normal;
-  font-size: 30px;
-  line-height: 1.4;
-  text-align: center;
-  color: #302144;
-  letter-spacing: -1px;
+    font-family: "Helvetica", sans-serif;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 1.4;
+    text-align: center;
+    color: #302144;
+    letter-spacing: -1px;
 }
 
 .psyche-info-list {
-  font-weight: normal;
-  color: black;
-  text-align: left;
-  align-self: center;
-  list-style-type: disc;
+    font-weight: normal;
+    color: black;
+    text-align: left;
+    align-self: center;
+    list-style-type: disc;
 }
 
 #launch-button {
-  margin-top: 25px;
-  margin-bottom: 25px;
-  font-size: 20px;
-  color: white;
-  font-weight: bold;
-  background: linear-gradient(to right, #f9a000, #f98400);
-  border: 2px 50% black;
-  border-radius: 20px;
-  height: 50px;
-  width: 75%;
-  cursor: pointer;
-  transition:
-    background-color 0.3s,
-    transform 0.1s;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    background: linear-gradient(to right, #f9a000, #f98400);
+    border: 2px 50% black;
+    border-radius: 20px;
+    height: 50px;
+    width: 75%;
+    cursor: pointer;
+    transition:
+            background-color 0.3s,
+            transform 0.1s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 #launch-button:active {
-  background: rgba(255, 255, 255, 0.5);
-  color: #f9a000;
-  transform: scale(0.95);
-  border: none;
+    background: rgba(255, 255, 255, 0.5);
+    color: #f9a000;
+    transform: scale(0.95);
+    border: none;
 }
 
 #launch-button:focus {
-  outline: 3px solid #80bdff;
-  outline-offset: 2px;
+    outline: 3px solid #80bdff;
+    outline-offset: 2px;
 }
 
 #launch-button:hover {
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.35);
 }
 
 .psyche-lore-telescope-img img {
-  margin-top: 25px;
-  width: 75%;
+    margin-top: 25px;
+    width: 75%;
 }
 
 .fade-in-section {
-  opacity: 0;
-  transform: translateY(20px);
-  transition:
-    opacity 1s ease-out,
-    transform 1s ease-out;
+    opacity: 0;
+    transform: translateY(20px);
+    transition:
+            opacity 1s ease-out,
+            transform 1s ease-out;
 }
 
 .fade-in-section.visible {
-  opacity: 1;
-  transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .psyche-info {
-  margin: 20px 0;
+    margin: 20px 0;
 }
 
 .psyche-info-line {
-  margin: 10px 0;
+    margin: 10px 0;
 }
 
 .about-link {
-  text-decoration: none;
-  color: white;
+    text-decoration: none;
+    color: white;
 }
 
 .about-button {
-  margin-top: 10px;
-  margin-bottom: 25px;
-  font-size: 20px;
-  color: white;
-  font-weight: bold;
-  background-color: gray;
-  /* background-color: #f9a000;#20162f; */
-  border: 2px 50% black;
-  border-radius: 16px;
-  height: 40px;
-  width: 50%;
-  cursor: pointer;
-  transition:
-    background-color 0.3s,
-    transform 0.1s;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+    background-color: gray;
+    /* background-color: #f9a000;#20162f; */
+    border: 2px 50% black;
+    border-radius: 16px;
+    height: 40px;
+    width: 50%;
+    cursor: pointer;
+    transition:
+            background-color 0.3s,
+            transform 0.1s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
 }
 
 .about-button:active {
-  background: rgba(255, 255, 255, 0.5);
-  transform: scale(0.95);
-  border: none;
+    background: rgba(255, 255, 255, 0.5);
+    transform: scale(0.95);
+    border: none;
 }
 
 .about-button:focus {
-  outline: none;
+    outline: none;
 }
 
 .about-button:hover {
-  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.35);
 }
 
 .footer {
-  background-image: linear-gradient(to right, #302144, #000000);
-  width: 100%;
-  justify-content: center;
+    background-image: linear-gradient(to right, #302144, #000000);
+    width: 100%;
+    justify-content: center;
 }
 
 .footer-links {
-  padding-top: 20px;
-  padding-bottom: 25px;
-  text-align: left;
-  width: 95%;
-  left: 50%;
-  margin: 0 auto;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    text-align: left;
+    width: 95%;
+    left: 50%;
+    margin: 0 auto;
 }
 .footer-links a {
-  color: white;
-  text-decoration: none;
+    color: white;
+    text-decoration: none;
 }
 .footer-links a:hover {
-  color: #f9a001;
+    color: #F9A001;
 }
 .footer-links a:visited {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .footer-link {
-  margin: 5px;
+    margin: 5px;
 }
