--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -7,10 +7,6 @@ canvas {
   display: block;
 }
 
-img {
-  pointer-events: none;
-}
-
 .main-title {
   position: absolute;
   left: 50%;
@@ -23,14 +19,7 @@ img {
   visibility: hidden;
   opacity: 0;
   transition: 1.5s;
-  user-select: all; /* allow copying */
 }
-
-.main-title::selection {
-  background: transparent; /* remove highlight effect */
-  color: inherit; /* keep text color unchanged */
-}
-
 /* Icon Button Styling */
 #help-icon-button {
   position: fixed;
@@ -40,13 +29,7 @@ img {
   height: 30px;
   cursor: pointer;
   z-index: 20;
-  user-select: all; /* allow copying */
   pointer-events: auto;
-}
-
-#help-icon-button::selection {
-  background: transparent; /* remove highlight effect */
-  color: inherit; /* keep text color unchanged */
 }
 
 #settings-icon-button {
@@ -57,13 +40,7 @@ img {
   height: 30px;
   cursor: pointer;
   z-index: 20;
-  user-select: all; /* allow copying */
   pointer-events: auto;
-}
-
-#settings-icon-button::selection {
-  background: transparent; /* remove highlight effect */
-  color: inherit; /* keep text color unchanged */
 }
 
 /* Modal Styling */
@@ -79,10 +56,9 @@ img {
 }
 
 .modal-popup {
-  background: url("../images/papyrus_scroll_double_sided_wide_rotated.png")
-    no-repeat center center;
+  background: url("../images/papyrus_scroll_double_sided_wide_rotated.png") no-repeat center center;
   background-size: 100% 100%;
-  font-family: "Lucida Calligraphy", "Brush Script MT", cursive;
+  font-family: 'Lucida Calligraphy', 'Brush Script MT', cursive;
   margin: 10% auto;
   padding: 20px;
   width: 80%;
@@ -189,17 +165,6 @@ img {
   pointer-events: auto;
   display: none;
   z-index: 10;
-  -webkit-mask-image: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0) 30%,
-    rgba(0, 0, 0, 1) 60%
-  );
-  mask-image: radial-gradient(
-    circle,
-    rgba(0, 0, 0, 0) 30%,
-    rgba(0, 0, 0, 1) 60%
-  );
-  backdrop-filter: none;
 }
 
 #help_modal {
@@ -346,9 +311,7 @@ input[type="range"]::-webkit-slider-thumb {
   background: black;
   border-radius: 50%;
   cursor: pointer;
-  transition:
-    transform 0.2s,
-    background 0.2s;
+  transition: transform 0.2s, background 0.2s;
 }
 
 input[type="range"]::-webkit-slider-thumb:hover {
@@ -363,3 +326,4 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 50%;
   cursor: pointer;
 }
+
