--- a/lore_and_mythology_experience/assets/css/chrysalis.css
+++ b/lore_and_mythology_experience/assets/css/chrysalis.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Papyrus';
+  src: url('../fonts/papyrus.ttf') format('truetype');
+}
+
 body {
   background-color: black;
   display: flex;
