--- a/lore_and_mythology_experience/assets/css/styles.css
+++ b/lore_and_mythology_experience/assets/css/styles.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Papyrus';
+  src: url('../fonts/papyrus.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Comfortaa';
+  src: url('../fonts/Comfortaa-VariableFont_wght.ttf') format('truetype');
+}
+
 body {
   margin: 0;
   overflow: hidden;
@@ -16,6 +26,7 @@ img {
   left: 50%;
   top: 10%;
   transform: translateX(-50%);
+  font-family: "Papyrus", fantasy;
   font-size: 24px;
   font-weight: bold;
   color: white;
@@ -362,4 +373,62 @@ input[type="range"]::-moz-range-thumb {
   background: black;
   border-radius: 50%;
   cursor: pointer;
+}
+
+/* PHASE CS */
+.phase-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: 1.5s;
+}
+
+.phase {
+  background-color: transparent;
+  width: calc(0.8 * 40vh);
+  height: 40vh;
+  border-radius: 12px;
+  z-index: 10;
+  transition: 1.5s;
+}
+
+.scroll {
+  background-color: transparent;
+  display: flex;
+  max-width: 300px;
+  width: 40vw;
+  max-height: 30vh;
+  border-radius: 12px;
+  z-index: 5;
+  transition: 1.5s ease-in-out;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.scroll-text-box {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  top: 1vh;
+  width: calc(0.8 * 40vh);
+  max-width: 240px;
+  color: black;
+  font-size: clamp(0.8rem, 2vw, 0.5rem);
+  font-family: 'Papyrus',
+  Arial, sans-serif;
+  text-align: center;
+  white-space: normal;
+  z-index: 10;
 }
